--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
+*.iml
 .gradle
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
 .DS_Store
 /build
+/captures
+.externalNativeBuild
+
+.idea
+import-summary.txt
+app/build/
+
