--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,12 @@
 *.iml
 .gradle
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
+/.idea/
 .DS_Store
 /build
 /captures
 .externalNativeBuild
 
-.idea
 import-summary.txt
 app/build/
-
+app/app.iml
