--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 *.iml
 .gradle
 /local.properties
-/.idea/
+/.idea/*
 .DS_Store
 /build
 /captures
@@ -10,17 +10,3 @@
 import-summary.txt
 app/build/
 app/app.iml
-
-*.iml
-
-.idea/gradle.xml
-
-.idea/gradle.xml
-
-.idea/misc.xml
-
-.idea/vcs.xml
-
-app/app.iml
-
-MyFramework.iml
