--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "26.0.2"
 
     defaultConfig {
-        applicationId "com.example.hoyouly.myframework"
+        applicationId "top.hoyouly.framework"
         minSdkVersion 14
         targetSdkVersion 22
         versionCode 1
