--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,5 +22,11 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.0.0'
-    compile files('libs/gson-2.2.jar')
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'//retrofit
+    compile 'com.google.code.gson:gson:2.6.2'//Gson 库
+//下面两个是RxJava 和RxAndroid
+    compile 'io.reactivex:rxjava:1.1.0'
+    compile 'io.reactivex:rxandroid:1.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'//转换器，请求结果转换成Model
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'//配合Rxjava 使用
 }
