--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.0.0'
 
     compile 'com.squareup.retrofit2:retrofit:2.1.0'//retrofit
-    compile 'com.squareup.okhttp3:okhttp:3.1.2'
+    compile 'com.squareup.okhttp3:okhttp:3.5.0'
 
     compile 'com.google.code.gson:gson:2.6.2'//Gson 库
     //下面两个是RxJava 和RxAndroid
@@ -33,4 +33,8 @@ dependencies {
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'//转换器，请求结果转换成Model
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'//配合Rxjava 使用
+
+    //添加打印log 的拦截器
+    compile 'com.squareup.okhttp3:logging-interceptor:3.5.0'
+
 }
