--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,9 @@ android {
     compileSdkVersion 22
     buildToolsVersion "26.0.2"
 
+    dataBinding {
+        enabled = true
+    }
     defaultConfig {
         applicationId "top.hoyouly.framework"
         minSdkVersion 14
