--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,7 @@ dependencies {
 
     //添加打印log 的拦截器
     compile 'com.squareup.okhttp3:logging-interceptor:3.5.0'
+    compile 'com.squareup.picasso:picasso:2.71828'
+
 
 }
