--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
+    compileSdkVersion 26
     buildToolsVersion "26.0.2"
 
     dataBinding {
@@ -24,22 +24,23 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.0.0'
-
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'//retrofit
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    //retrofit
     compile 'com.squareup.okhttp3:okhttp:3.5.0'
-
-    compile 'com.google.code.gson:gson:2.6.2'//Gson 库
+    compile 'com.google.code.gson:gson:2.6.2'
+    //Gson 库
     //下面两个是RxJava 和RxAndroid
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'io.reactivex:rxandroid:1.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'//转换器，请求结果转换成Model
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'//配合Rxjava 使用
-
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    //转换器，请求结果转换成Model
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    //配合Rxjava 使用
     //添加打印log 的拦截器
     compile 'com.squareup.okhttp3:logging-interceptor:3.5.0'
     compile 'com.squareup.picasso:picasso:2.71828'
-
-
+    implementation 'com.android.support:appcompat-v7:26.0.0'
+    implementation 'com.android.support:support-v4:26.0.0'
+    implementation 'com.android.support:recyclerview-v7:26.0.0'
 }
