--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@style/AppTheme" >
 
         <activity
-            android:name=".mv.DataBindingActivity"
+            android:name=".mv.UserActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,6 +25,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".mv.User3Activity"/>
+        <activity android:name=".mv.User4Activity"/>
+        <activity android:name=".mv.User5Activity"/>
+        <activity android:name=".mv.User6Activity"/>
+        <activity android:name=".mv.User7Activity"/>
+        <activity android:name=".mv.User8Activity"/>
+        <activity android:name=".mv.User9Activity"/>
+        <activity android:name=".mv.User10Activity"/>
+        <activity android:name=".mv.User11Activity"/>
+        <activity android:name=".mv.User12Activity"/>
     </application>
 
 </manifest>
