--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
+    compileSdkVersion 26
     buildToolsVersion "26.0.2"
 
     dataBinding {
@@ -10,7 +10,7 @@ android {
     defaultConfig {
         applicationId "top.hoyouly.framework"
         minSdkVersion 14
-        targetSdkVersion 22
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
 
@@ -25,7 +25,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.0.0'
 
     compile 'com.squareup.retrofit2:retrofit:2.1.0'//retrofit
     compile 'com.squareup.okhttp3:okhttp:3.5.0'
@@ -41,6 +40,8 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.5.0'
     compile 'com.squareup.picasso:picasso:2.71828'
 
-    compile 'com.android.support:recyclerview-v7:24.1.1'
+    implementation 'com.android.support:appcompat-v7:26.0.0'
+    implementation 'com.android.support:support-v4:26.0.0'
+    implementation 'com.android.support:recyclerview-v7:26.0.0'
 
 }
