--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,7 @@ dependencies {
     implementation 'com.android.support:support-v4:26.0.0'
     implementation 'com.android.support:recyclerview-v7:26.0.0'
 
+    compile 'com.android.support:design:26.0.0'
+
+
 }
