--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         <activity android:name=".GankActivity"/>
         <activity android:name=".BenefitActivity"/>
         <activity android:name=".OpenApiActivity"/>
-        <activity android:name=".MeituFragment"/>
+        <activity android:name=".OpenApiFragment"/>
     </application>
 
 </manifest>
